PESISTENCE FOR PLAYER WITH BUNDLES

--- a/app/src/main/res/layout-land/play_game.xml
+++ b/app/src/main/res/layout-land/play_game.xml
@@ -96,15 +96,17 @@
 
     <Button
         android:id="@+id/playButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/buttons"
         android:onClick="onPlayButton"
         android:text="@string/play"
-        app:layout_constraintEnd_toStartOf="@+id/guideline7"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintEnd_toEndOf="@+id/dice2Result"
+        app:layout_constraintStart_toStartOf="@+id/dice1Result"
         app:layout_constraintTop_toBottomOf="@+id/dice2Text" />
 
     <TextView
@@ -126,8 +128,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/buttons"
         android:onClick="onStatsButton"
         android:text="@string/stats"
+        android:textColor="@android:color/background_light"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/playButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline7" />
