--- a/app/src/main/res/layout/show_stats.xml
+++ b/app/src/main/res/layout/show_stats.xml
@@ -23,6 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/success"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/successRate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -70,7 +72,8 @@
             <TextView
                 android:id="@+id/gameArray"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
 
